Add option for PolicyGenerator policies in telco-ran-du-ztp role
This change adds a new `acm_policygenerator` variable to the
`telco-ran-du-ztp` role which controls whether to use ACM
PolicyGenerator instead of RAN PolicyGenTemplate to generate
ACM policies.

Signed-off-by: Marius Cornea <mcornea@redhat.com>

--- a/ansible/roles/telco-ran-du-ztp/templates/ns.yaml
+++ b/ansible/roles/telco-ran-du-ztp/templates/ns.yaml
@@ -12,3 +12,29 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: ztp-site
+{% if acm_policygenerator %}
+---
+apiVersion: cluster.open-cluster-management.io/v1beta2
+kind: ManagedClusterSetBinding
+metadata:
+  name: global
+  namespace: ztp-common
+spec:
+  clusterSet: global
+---
+apiVersion: cluster.open-cluster-management.io/v1beta2
+kind: ManagedClusterSetBinding
+metadata:
+  name: global
+  namespace: ztp-group
+spec:
+  clusterSet: global
+---
+apiVersion: cluster.open-cluster-management.io/v1beta2
+kind: ManagedClusterSetBinding
+metadata:
+  name: global
+  namespace: ztp-site
+spec:
+  clusterSet: global
+{% endif %}
