--- a/ansible/roles/mce-assisted-installer/templates/assisted-mirror-config.yml
+++ b/ansible/roles/mce-assisted-installer/templates/assisted-mirror-config.yml
@@ -31,7 +31,11 @@ data:
       mirror-by-digest-only = false
 
       [[registry.mirror]]
+        {% if is_konflux_build %}
+        location = "{{ rhacm_disconnected_registry }}:{{ rhacm_disconnected_registry_port }}/rhacm2"
+        {% else %}
         location = "{{ rhacm_disconnected_registry }}:{{ rhacm_disconnected_registry_port }}/acm-d"
+        {% endif %}
 
     [[registry]]
       prefix = ""
@@ -39,8 +43,11 @@ data:
       mirror-by-digest-only = false
 
       [[registry.mirror]]
+        {% if is_konflux_build %}
+        location = "{{ rhacm_disconnected_registry }}:{{ rhacm_disconnected_registry_port }}/multicluster-engine"
+        {% else %}
         location = "{{ rhacm_disconnected_registry }}:{{ rhacm_disconnected_registry_port }}/acm-d"
-
+        {% endif %}
     [[registry]]
       prefix = ""
       location = "quay.io/ocpmetal"
@@ -71,7 +78,11 @@ data:
       mirror-by-digest-only = false
 
       [[registry.mirror]]
+        {% if is_konflux_build %}
+        location = "{{ rhacm_disconnected_registry }}:{{ rhacm_disconnected_registry_port }}/rhacm2"
+        {% else %}
         location = "{{ rhacm_disconnected_registry }}:{{ rhacm_disconnected_registry_port }}/acm-d"
+        {% endif %}
 {% endif %}
 
     [[registry]]
