--- a/ansible/roles/rhacm-downstream-deploy/defaults/main.yml
+++ b/ansible/roles/rhacm-downstream-deploy/defaults/main.yml
@@ -4,6 +4,8 @@
 rhacm_deploy_repo: https://github.com/stolostron/deploy.git
 rhacm_deploy_repo_branch: master
 
+mch_name: multiclusterhub
+
 rhacm_search_storageclass: localstorage2-sc
 # Irrelevent when the PV provided will be larger anyway, applies to OBS PVs too
 rhacm_search_storagesize: 20Gi
