Update ibu/ibi seed image versions

--- a/ansible/roles/ibi-copy-disk-file/defaults/main.yml
+++ b/ansible/roles/ibi-copy-disk-file/defaults/main.yml
@@ -5,4 +5,4 @@
 hv_ibi_disk_dir: /mnt/disk2/libvirt/ibi-disk
 
 # Version of the seed image was used dto prepare SNO disk file
-seed_image_version: 4.17.0-rc.2
+seed_image_version: 4.19.14
