--- a/ansible/roles/ibi-create-prep-iso/defaults/main.yml
+++ b/ansible/roles/ibi-create-prep-iso/defaults/main.yml
@@ -2,10 +2,10 @@
 # ibi-create-prep-iso default vars
 
 # Version of OpenShift which has an openshift-install binary capable of generating IBI ISO images
-ocp_ibi_version: quay.io/openshift-release-dev/ocp-release:4.17.0-rc.0-x86_64
+ocp_ibi_version: quay.io/openshift-release-dev/ocp-release:4.19.14-x86_64
 
 # Version of the seed image we are using for this ibi iso file
-seed_image_version: 4.17.0-rc.2
+seed_image_version: 4.19.14
 
 # Path to Registry on the Bastion machine
 registry_path: /opt/registry
