--- a/ansible/roles/ibi-install-prep/defaults/main.yml
+++ b/ansible/roles/ibi-install-prep/defaults/main.yml
@@ -17,4 +17,4 @@ redfish_user: redhat
 redfish_password: password
 
 # Version of the seed image was used during the prep iso creation
-seed_image_version: 4.17.0-rc.2
+seed_image_version: 4.19.14
