Add ability to avoid waiting for the assisted service pod to be running

--- a/ansible/roles/mce-assisted-installer/defaults/main.yml
+++ b/ansible/roles/mce-assisted-installer/defaults/main.yml
@@ -18,3 +18,5 @@ agentservice_sc: localstorage-sc
 
 agentservice_database_storage_size: 20Gi
 agentservice_filesystem_storage_size: 20Gi
+
+wait_for_assisted_service_pod: true
