--- a/ansible/roles/rhacm-global-hub-deploy/tasks/main.yml
+++ b/ansible/roles/rhacm-global-hub-deploy/tasks/main.yml
@@ -16,6 +16,11 @@
   - src: mcgh.yaml.j2
     dest: "{{ install_directory }}/rhacm-global-hub-deploy/mcgh.yaml"
 
+- name: Apply ACM Global Hub Catalog Source Manifest
+  shell: |
+    KUBECONFIG={{ hub_cluster_kubeconfig }} oc apply -f {{ acm_global_hub_catalog_source_manifest }}
+  when: apply_acm_global_hub_catalog_source_manifest
+
 - name: Apply ACM Global Hub Operator manifest
   shell: |
     KUBECONFIG={{ hub_cluster_kubeconfig }} oc apply -f {{ install_directory }}/rhacm-global-hub-deploy/acm-global-hub-operator.yaml
