--- a/ansible/roles/rhacm-hub-icsp/tasks/main.yml
+++ b/ansible/roles/rhacm-hub-icsp/tasks/main.yml
@@ -62,7 +62,9 @@
   when: icsp_exists.rc == 1
 
 - name: Obtain node ips for fixing ICSP mirroring
-  when: rhacm_icsp_enable_tag_mirror
+  when:
+  - not is_konflux_build
+  - rhacm_icsp_enable_tag_mirror
   block:
   - name: Get node ip addresses
     shell: |
