Update pull_secret.txt to pull-secret.txt

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,7 @@ aap_manifest.zip
 
 # Prevent pull_secret file upload
 pull_secret.*
+pull-secret.*
 
 # Ignore local ocp_inventory.json files
 *.json
